--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,9 @@
     <string name="app_name">Skill Tracker</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">Sign in</string>
-    <string name="title_logout">LogOut</string>
+    <string name="title_logout">Logout</string>
+    <string name="title_notification">Notification</string>
+    <string name="title_reports">Report</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
@@ -11,14 +13,13 @@
     <string name="loading">Loading</string>
 
     <string name="refresh_btn">Refresh</string>
-    <string name="title_activity_employee_main">EmployeeMain</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="title_activity_manager_main">ManagerMain</string>
-    <string name="title_activity_user">UserActivity</string>
+    <string name="title_activity_user">Welcome!</string>
 
     <string name="skills">Skills</string>
     <string name="certificates">Certificates</string>
     <string name="clients">Clients</string>
+    <string name="title_activity_employee_view">EmployeeView</string>
 </resources>
