--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="certificates">Certificates</string>
     <string name="clients">Clients</string>
     <string name="title_activity_employee_view">EmployeeView</string>
+    <string name="title_activity_edit">Edit</string>
 </resources>
